[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Danuk-Udagama <danuk.udagama@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
